--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,261 @@
+:root {
+  --Background: hsl(0, 0%, 98%);
+  --Elements: #fff;
+  --Text: hsl(200, 15%, 8%);
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
   min-height: 100vh;
+  background-color: var(--Background);
+  transition: 0.3s;
+}
+
+header {
+  font-size: 0.9em;
+  background-color: var(--Elements);
+  box-shadow: 0 3px 10px hsla(200, 15%, 8%, 0.1);
+  transition: 0.3s;
+  color: var(--Text);
+}
+
+.text-bold {
+  font-weight: 600;
+}
+
+.navbar {
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
+  width: 90%;
+  margin: auto;
+}
+
+.toggle {
+  display: flex;
   align-items: center;
+  gap: 6px;
+  cursor: pointer;
+}
+
+.container {
+  width: 90%;
+  margin: auto;
+}
+
+.search-panel {
+  display: flex;
+  justify-content: space-between;
+  margin: 48px 0;
+  transition: 0.3s;
+}
+
+.search-panel .search-box {
+  display: flex;
+  padding: 16px 30px;
+  background-color: var(--Elements);
+  color: var(--Text);
+  box-shadow: 0 0 5px 2px hsla(200, 15%, 8%, 0.1);
+  border-radius: 5px;
+  transition: 0.3s;
+}
+
+.search-box input {
+  width: 300px;
+  background: transparent;
+  padding-left: 20px;
+  border: none;
+  transition: 0.3s;
+  color: var(--Text);
+}
+
+.search-panel .dropdown {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: relative;
+  width: 170px;
+  padding: 15px;
+  outline: none;
+  border: none;
+  border-radius: 5px;
+  background-color: var(--Elements);
+  box-shadow: 0 0 5px 2px hsla(200, 15%, 8%, 0.1);
+  color: var(--Text);
+  cursor: pointer;
+}
+
+.dropdown p {
+  margin: 0;
+}
+
+.dropdown .items {
+  position: absolute;
+  background-color: var(--Elements);
+  box-shadow: 0 0 5px 2px hsla(200, 15%, 8%, 0.1);
+  top: 107%;
+  left: 0;
+  border-radius: 5px;
+}
+
+.items p {
+  width: 170px;
+  padding: 8px 15px;
+}
+
+.items p:hover {
+  color: var(--Elements);
+  background-color: var(--Text);
+}
+
+.container {
+  font-size: 14px;
+}
+
+.contents {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(225px, 1fr));
+  gap: 60px;
+  margin-top: 45px;
+}
+
+.card {
+  background-color: var(--Elements);
+  color: var(--Text);
+  box-shadow: 0 0 5px 2px hsla(200, 15%, 8%, 0.1);
+  border-radius: 5px;
+  overflow: hidden;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
+
+.card img {
+  width: 100%;
+  height: 161px;
+  object-fit: cover;
+}
+
+.card .content {
+  padding: 24px;
+}
+
+.content h3 {
+  margin: 0 0 24px;
+}
+
+.content p {
+  margin: 0 0 13px;
+  font-weight: 300;
+}
+
+.error {
+  color: red;
+  font-size: 3rem;
+  font-weight: 700;
+  text-align: center;
+  width: 100%;
+}
+
+.back-button {
+  display: flex;
+  width: 136px;
+  height: 40px;
+  margin: 58px 0;
+  padding: 0;
+  border: none;
+  border-radius: 5px;
+  background-color: var(--Elements);
+  color: var(--Text);
+  box-shadow: 0 0 5px 2px hsla(200, 15%, 8%, 0.1);
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  gap: 13px;
+  cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
+.main-details {
+  display: flex;
+  height: 300px;
+  gap: 150px;
+  color: var(--Text);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.main-details .flag {
+  flex: 1;
+}
+
+.flag img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.main-details .detail {
+  flex: 1;
+}
+
+.detail .content {
+  display: flex;
+}
+
+.content .left {
+  flex: 1;
+}
+
+.content .right {
+  flex: 1;
+}
+
+.detail .borders {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+
+.borders .border {
+  padding: 5px 15px;
+  background-color: var(--Elements);
+  color: var(--Text);
+  box-shadow: 0 0 5px 2px hsla(200, 15%, 8%, 0.1);
+  border-radius: 3px;
+}
+
+.borders .border:hover {
+  opacity: 0.7;
+}
+
+@media screen and (max-width: 500px) {
+  .search-panel {
+    flex-direction: column;
+    gap: 50px;
   }
-  to {
-    transform: rotate(360deg);
+
+  .contents {
+    width: 83%;
+    margin: auto;
+  }
+
+  .main-details {
+    flex-direction: column;
+    height: auto;
+    padding-bottom: 30px;
+    gap: 30px;
+  }
+
+  .main-details .detail {
+    flex: 2;
+  }
+
+  .detail .content {
+    flex-direction: column;
+    gap: 50px;
+  }
+
+  .borders p {
+    width: 100%;
   }
 }
