--- a/src/App.css
+++ b/src/App.css
@@ -178,7 +178,8 @@ a {
 
 .main-details {
   display: flex;
-  height: 300px;
+  min-height: 300px;
+  padding-bottom: 25px;
   gap: 150px;
   color: var(--Text);
 }
@@ -189,7 +190,7 @@ a {
 
 .flag img {
   width: 100%;
-  height: 100%;
+  height: 300px;
   object-fit: cover;
 }
 
